--- a/styles.css
+++ b/styles.css
@@ -23,14 +23,13 @@ footer .div {
 }
 
 
-.content {
-    grid-area: content;
-    min-height: 100vh;
-}
+
 
 .main-nav {
     grid-area: nav;
-
+    -moz-box-shadow: 0 0 5px #888;
+    -webkit-box-shadow: 0 0 5px#888;
+    box-shadow: 0 0 5px #888;
     border-right: 1px solid lightgray;
 }
 
@@ -44,6 +43,19 @@ footer .div {
         "nav"
         "content"
     ;
+}
+.headNav{display: none;}
+.bodyNav{display: flex;}
+
+@media (max-width: 500px) {
+    .wrapper{
+        display: contents;
+    }
+    .headNav{display: inherit;}
+    .bodyNav{display: none;}
+    .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
+        background-color: transparent;
+    }
 }
 
 @media (min-width: 500px) {
@@ -70,6 +82,15 @@ footer .div {
     nav ul {
         flex-direction: column;
     }
+
+    .content {
+        grid-area: content;
+        min-height: 100vh;
+    }
+
+    .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+        padding: 0;
+    }
 }
 
 .close-icon {
@@ -80,6 +101,11 @@ footer .div {
     text-decoration: none;
 }
 
-/* main{
-    padding-bottom: 60px;
-} */
+.accordion-body {
+    display: flex;
+    justify-content: center;
+}
+.symptomsList{
+    color:gray;
+    font-size: smaller;
+}
