--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+
+
 nav a .img {
     width: 100px;
 }
@@ -6,19 +8,33 @@ nav a .img {
     border-bottom: 0;
 }
 
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
-    border-color: #dee2e6 #dee2e6
+body {
+    font-family: sans-serif;
 }
+.nav-link{
+color:black
+}
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    border-color: #dee2e6 #dee2e6;
+    background-color: #198754;
+    color: white;
+}
+
 
 footer {
     /* position: fixed;
     bottom: 0; */
     width: -webkit-fill-available;
+    color:black
 
 }
 
 footer .div {
     width: -webkit-fill-available;
+
+}
+footer .text-light {
+    color:black !important
 
 }
 
@@ -27,9 +43,9 @@ footer .div {
 
 .main-nav {
     grid-area: nav;
-    -moz-box-shadow: 0 0 5px #888;
-    -webkit-box-shadow: 0 0 5px#888;
-    box-shadow: 0 0 5px #888;
+    -moz-box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
+    -webkit-box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
     border-right: 1px solid lightgray;
 }
 
@@ -44,16 +60,30 @@ footer .div {
         "content"
     ;
 }
-.headNav{display: none;}
-.bodyNav{display: flex;}
 
-@media (max-width: 500px) {
-    .wrapper{
+.headNav {
+    display: none;
+}
+
+.bodyNav {
+    display: flex;
+}
+
+@media (max-width: 699px) {
+    h4{font-size: inherit;}
+    .wrapper {
         display: contents;
     }
-    .headNav{display: inherit;}
-    .bodyNav{display: none;}
-    .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
+
+    .headNav {
+        display: inherit;
+    }
+
+    .bodyNav {
+        display: none;
+    }
+
+    .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
         background-color: transparent;
     }
 }
@@ -105,7 +135,121 @@ footer .div {
     display: flex;
     justify-content: center;
 }
-.symptomsList{
-    color:gray;
+
+.symptomsList {
+    color: gray;
+    font-size: smaller;
+}
+
+.border-left-primary {
+    border-left: 0.25rem solid #4e73df !important;
+}
+
+.border-bottom-primary {
+    border-bottom: 0.25rem solid #4e73df !important;
+}
+
+.border-left-secondary {
+    border-left: 0.25rem solid #858796 !important;
+}
+
+.border-bottom-secondary {
+    border-bottom: 0.25rem solid #858796 !important;
+}
+
+.border-left-success {
+    border-left: 0.25rem solid #1cc88a !important;
+}
+
+.border-bottom-success {
+    border-bottom: 0.25rem solid #1cc88a !important;
+}
+
+.border-left-info {
+    border-left: 0.25rem solid #36b9cc !important;
+}
+
+.border-bottom-info {
+    border-bottom: 0.25rem solid #36b9cc !important;
+}
+
+.border-left-warning {
+    border-left: 0.25rem solid #f6c23e !important;
+}
+
+.border-bottom-warning {
+    border-bottom: 0.25rem solid #f6c23e !important;
+}
+
+.border-left-danger {
+    border-left: 0.25rem solid #e74a3b !important;
+}
+
+.border-bottom-danger {
+    border-bottom: 0.25rem solid #e74a3b !important;
+}
+
+.border-left-light {
+    border-left: 0.25rem solid #f8f9fc !important;
+}
+
+.border-bottom-light {
+    border-bottom: 0.25rem solid #f8f9fc !important;
+}
+
+.border-left-dark {
+    border-left: 0.25rem solid #5a5c69 !important;
+}
+
+.border-bottom-dark {
+    border-bottom: 0.25rem solid #5a5c69 !important;
+}
+
+.text-xs {
+    font-size: .7rem;
+}
+
+.text-lg {
+    font-size: 1.2rem;
+}
+
+.text-gray-100 {
+    color: #f8f9fc !important;
+}
+
+.text-gray-200 {
+    color: #eaecf4 !important;
+}
+
+.text-gray-300 {
+    color: #dddfeb !important;
+}
+
+.text-gray-400 {
+    color: #d1d3e2 !important;
+}
+
+.text-gray-500 {
+    color: #b7b9cc !important;
+}
+
+.text-gray-600 {
+    color: #858796 !important;
+}
+
+.text-gray-700 {
+    color: #6e707e !important;
+}
+
+.text-gray-800 {
+    color: #5a5c69 !important;
+}
+
+.text-gray-900 {
+    color: #3a3b45 !important;
+}
+
+.notificationCard {
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important;
     font-size: smaller;
 }
