removing comment and spaces

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-
-
 nav a .img {
     width: 100px;
 }
@@ -11,9 +9,11 @@ nav a .img {
 body {
     font-family: sans-serif;
 }
-.nav-link{
-color:black
+
+.nav-link {
+    color: black
 }
+
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
     border-color: #dee2e6 #dee2e6;
     background-color: #198754;
@@ -25,17 +25,16 @@ footer {
     /* position: fixed;
     bottom: 0; */
     width: -webkit-fill-available;
-    color:black
-
+    color: black
 }
 
 footer .div {
     width: -webkit-fill-available;
 
 }
-footer .text-light {
-    color:black !important
 
+footer .text-light {
+    color: black !important
 }
 
 
@@ -70,7 +69,10 @@ footer .text-light {
 }
 
 @media (max-width: 699px) {
-    h4{font-size: inherit;}
+    h4 {
+        font-size: inherit;
+    }
+
     .wrapper {
         display: contents;
     }
