--- a/styles.css
+++ b/styles.css
@@ -91,12 +91,13 @@ footer .text-light {
 }
 
 @media (min-width: 500px) {
-    .wrapper {
+    /* .wrapper {
         grid-template-columns: 1fr 3fr;
         grid-template-areas:
             "nav     nav"
             "sidebar content";
-    }
+    } */
+    
 
     nav ul {
         display: flex;
